fix when orientation changes the slider does not responsively change

--- a/view/frontend/web/css/source/livewise.less
+++ b/view/frontend/web/css/source/livewise.less
@@ -1,13 +1,9 @@
 .magestore-bannerslider {
 
     .magestore-bannerslide-livewise {
+        width: 100%;
         max-width: 100%;
-        margin-bottom: 60px;
-
-        .with-animate {
-            transition-property: margin, filter, opacity;
-            transition-duration: 1s;
-        }
+        margin-bottom: 40px;
 
         .bannerslide-livewise {
             .slides-container {
